--- a/testAndroid/Demo1/res/layout/main.xml
+++ b/testAndroid/Demo1/res/layout/main.xml
@@ -7,7 +7,7 @@
     <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Hello World, MainActivity"
-            />
+            android:text="Hello World, MainActivity" />
+    <Button android:id="@+id/process_list_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="ProcessList" />
 </LinearLayout>
 
